# voltage-modbus

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RTU_IMPLEMENTATION.md  test_rtu.md
.github/workflows/: ci.yml  docs.yml
src/: client.rs  error.rs  lib.rs  logging.rs  protocol.rs  register_bank.rs  server.rs  transport.rs  utils.rs
test/: advanced_server.py
tests/: integration_tests.rs
